# ragu

./: CLAUDE.md  Cargo.toml  README.md  _typos.toml  justfile  rust-toolchain.toml
.claude/book-review/: formatting.md  grammar.md  prose.md  standards.md
.claude/code-review/: documentation.md  standards.md
.claude/review-shared/: surface-placement.md  writing.md
.github/workflows/: bench.yml  notify-website.yml  rust.yml  steal-secrets.yml
book/: FIXME.md  README.md  book.toml  custom.css  macros.txt  preprocessor-todo.py  todo.js
book/src/: Introduction.md  SUMMARY.md  introduction.md  terminology.md
crates/ragu_app/: Cargo.toml
crates/ragu_app/src/: lib.rs
crates/ragu_app/tests/: example.rs
crates/ragu_arithmetic/: CHANGELOG.md  Cargo.toml  README.md
crates/ragu_circuits/: CHANGELOG.md  Cargo.toml  README.md
crates/ragu_pasta/: CHANGELOG.md  Cargo.toml  README.md  pasta_common.rs
crates/ragu_pasta/src/: lib.rs  macros.rs  poseidon_consistency_test.rs  poseidon_fp.rs  poseidon_fq.rs
crates/ragu_pcd/: Cargo.toml  README.md
crates/ragu_pcd/benches/: pcd.rs
crates/ragu_pcd/benches/criterion/: fuse.rs
crates/ragu_pcd/benches/setup/: mod.rs
crates/ragu_pcd/examples/: EXAMPLES.md  hello_pcd.rs  merkle_tree.rs  rerandomize_pcd.rs  staging.rs
crates/ragu_pcd/src/: accumulator.rs  circuits.rs  cycle.rs  deferreds.rs  engine.rs  fuse.rs  fuzz_utils.rs  header.rs  lib.rs  merge.rs  proof.rs  prover.rs  session.rs  stages.rs  step.rs  test_utils.rs  transcript.rs  verify.rs
crates/ragu_pcd/src/circuits/: circuit_c.rs  circuit_v.rs  compute_v.rs  dummy.rs  full_collapse.rs  mod.rs  partial_collapse.rs  test_params.rs  tests.rs  unified.rs
crates/ragu_pcd/src/circuits/native/: compute_v.rs  endoscale_challenges.rs  full_collapse.rs  hashes_1.rs  hashes_2.rs  mod.rs  partial_collapse.rs  unified.rs
crates/ragu_pcd/src/circuits/native/stages/: error_m.rs  error_n.rs  eval.rs  mod.rs  preamble.rs  query.rs
crates/ragu_pcd/src/circuits/nested/: child_proofs.rs  mod.rs
crates/ragu_pcd/src/circuits/nested/stages/: mod.rs  preamble.rs
crates/ragu_pcd/src/circuits/stages/native/: eval.rs  preamble.rs  query.rs
crates/ragu_pcd/src/components/: batched_quotient.rs  claim_builder.rs  compute_c.rs  endoscalar.rs  f_polynomial.rs  fold_revdot.rs  horner.rs  ky.rs  mod.rs  root_of_unity.rs  suffix.rs  transcript.rs
crates/ragu_pcd/src/components/claims/: mod.rs  native.rs  nested.rs
crates/ragu_pcd/src/endoscalar/: endoscalar.rs  mod.rs
crates/ragu_pcd/src/fuse/: _01_application.rs  _02_preamble.rs  _03_s_prime.rs  _04_error_m.rs  _04_inner_error.rs  _05_error_n.rs  _05_outer_error.rs  _06_ab.rs  _07_query.rs  _08_f.rs  _09_eval.rs  _10_p.rs  _11_circuits.rs  claims.rs  mod.rs
crates/ragu_pcd/src/internal/: claims.rs  endoscalar.rs  fold_revdot.rs  mod.rs  suffix.rs  tests.rs  transcript.rs
crates/ragu_pcd/src/internal/native/: circuits.rs  claims.rs  mod.rs  unified.rs
crates/ragu_pcd/src/internal/native/circuits/: compute_v.rs  full_collapse.rs  hashes_1.rs  hashes_2.rs  inner_collapse.rs  outer_collapse.rs  partial_collapse.rs
crates/ragu_pcd/src/internal/native/stages/: eval.rs  inner_error.rs  mod.rs  outer_error.rs  preamble.rs  query.rs
crates/ragu_pcd/src/internal/nested/: claims.rs  mod.rs
crates/ragu_pcd/src/internal/nested/circuits/: copying.rs  loading.rs  mod.rs
crates/ragu_pcd/src/internal/nested/stages/: mod.rs  preamble.rs
crates/ragu_pcd/src/internal_circuits/: c.rs  compute_c.rs  compute_v.rs  dummy.rs  fold.rs  full_collapse.rs  hashes_1.rs  hashes_2.rs  ky.rs  mod.rs  partial_collapse.rs  routing.rs  stages.rs  unified.rs  v.rs
crates/ragu_pcd/src/internal_circuits/stages/native/: aggregate.rs  error_m.rs  error_n.rs  eval.rs  preamble.rs  query.rs
crates/ragu_pcd/src/ipa/: compress.rs  mod.rs  prover.rs  transcript.rs  verifier.rs
crates/ragu_pcd/src/merge/stages/: error.rs  eval.rs  native_eval.rs  native_query.rs  nested_s_prime.rs  preamble.rs  query.rs
crates/ragu_pcd/src/nested_encoding/: b_stage.rs  d_stage.rs  e_stage.rs  mod.rs
crates/ragu_pcd/src/pallas/: accumulation.rs  deferred.rs  endoscalar.rs  mod.rs
crates/ragu_pcd/src/proof/: components.rs  mod.rs
crates/ragu_pcd/src/routines/: c.rs  horners.rs  mod.rs
crates/ragu_pcd/src/stages/: native_error.rs  nested_ab.rs
crates/ragu_pcd/src/stages/native/: preamble.rs
crates/ragu_pcd/src/staging/: b_stage.rs  d_stage.rs  e_stage.rs  g_stage.rs  instance.rs  k_stage.rs  macros.rs  mod.rs  stage_macros.rs
crates/ragu_pcd/src/staging/circuits/: b_stage.rs  d_stage.rs  e_stage.rs  endoscalar.rs  g_stage.rs  mod.rs
crates/ragu_pcd/src/staging/common/: deferreds.rs  endoscalar.rs  mod.rs
crates/ragu_pcd/src/staging/fp/: deferreds.rs  endoscale.rs  mod.rs
crates/ragu_pcd/src/staging/fq/: endoscale.rs  mod.rs
crates/ragu_pcd/src/staging/pallas/: deferred.rs  endoscale.rs  mod.rs
crates/ragu_pcd/src/staging/utility/: mod.rs
crates/ragu_pcd/src/staging/vesta/: deferreds.rs  endoscale.rs  mod.rs
crates/ragu_pcd/src/step/: adapter.rs  dummy.rs  encoder.rs  mod.rs  padded.rs  rerandomize.rs  trivial.rs
crates/ragu_pcd/src/step/internal/: adapter.rs  padded.rs  rerandomize.rs  trivial.rs
crates/ragu_pcd/src/test_fixtures/: nontrivial.rs  trivial.rs
crates/ragu_pcd/src/utilities/: dummy_circuits.rs
crates/ragu_pcd/src/verify/: stub_step.rs
crates/ragu_pcd/src/vesta/: accumulation.rs  deferreds.rs  endoscalar.rs  mod.rs  structures.rs
crates/ragu_pcd/tests/: constraint_headroom.rs  d_wire.rs  nontrivial.rs  registration_errors.rs  rerandomization.rs
crates/ragu_testing/: Cargo.toml  README.md
crates/ragu_testing/fuzz/: Cargo.toml  fuzz.sh
crates/ragu_testing/fuzz/fuzz_targets/: fuzz_element_ops.rs  fuzz_endoscalar.rs  fuzz_fold_revdot.rs  fuzz_poseidon_differential.rs  fuzz_poseidon_sponge.rs  fuzz_revdot.rs  fuzz_sxy_agreement.rs  fuzz_verify_reject.rs
crates/ragu_testing/src/: lib.rs  registry.rs  strategies.rs
crates/ragu_testing/src/circuits/: mod.rs
crates/ragu_testing/src/pcd/: nontrivial.rs
src/: lib.rs
(+204 files in other folders)
