[package]
name = "ragu_pasta"
version = "0.0.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = """
Pasta curve cycle public parameters for the Ragu project
"""
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

readme = "README.md"
repository = "https://github.com/tachyon-zcash/ragu"
documentation = "https://docs.rs/ragu_pasta"
categories = ["cryptography", "mathematics", "algorithms", "science", "no-std"]
keywords = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
all-features = true

[features]
default = []
baked = ["lazy_static"]

[build-dependencies]
arithmetic = { path = "../ragu_arithmetic", version = "0.0.0", package = "ragu_arithmetic" }
ff = { workspace = true }
group = { workspace = true }
pasta_curves = { workspace = true }

[dependencies]
arithmetic = { path = "../ragu_arithmetic", version = "0.0.0", package = "ragu_arithmetic" }
ff = { workspace = true }
group = { workspace = true }
pasta_curves = { workspace = true }

lazy_static = { workspace = true, optional = true }

[dev-dependencies]
halo2_poseidon = { git = "https://github.com/zcash/halo2.git", features = ["test-dependencies"] }
ragu_core = { path = "../ragu_core", version = "0.0.0", package = "ragu_core" }
ragu_primitives = { path = "../ragu_primitives", version = "0.0.0", package = "ragu_primitives" }
