[package]
name = "ragu_testing-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
ff = { version = "0.14.0-pre.0", default-features = false }
group = { version = "0.14.0-pre.0", default-features = false }
pasta_curves = "0.5.1"
ragu_testing = { path = ".." }
ragu_arithmetic = { path = "../../ragu_arithmetic" }
ragu_primitives = { path = "../../ragu_primitives" }
ragu_pasta = { path = "../../ragu_pasta", features = ["baked"] }
ragu_core = { path = "../../ragu_core" }

[patch.crates-io]
addchain = { git = "https://github.com/ebfull/addchain", rev = "da4099a81bc29c895f3ca0ebcaae21c860494c12" }
ff = { git = "https://github.com/ebfull/ff", branch = "release-0.14.0-with-rand-0.10" }
group = { git = "https://github.com/ebfull/group", branch = "release-0.14.0-with-rand-0.10" }
pasta_curves = { git = "https://github.com/ebfull/pasta_curves", branch = "ff-0.14-with-rand-0.10" }

# Poseidon sponge: absorb/squeeze mode transitions + save/resume consistency
[[bin]]
name = "fuzz_poseidon_sponge"
path = "fuzz_targets/fuzz_poseidon_sponge.rs"
test = false
doc = false
bench = false

# Endoscalar: extract/lift roundtrip — circuit vs native agreement
[[bin]]
name = "fuzz_endoscalar"
path = "fuzz_targets/fuzz_endoscalar.rs"
test = false
doc = false
bench = false

# Simulator element ops: constraint satisfaction under arbitrary op sequences
[[bin]]
name = "fuzz_element_ops"
path = "fuzz_targets/fuzz_element_ops.rs"
test = false
doc = false
bench = false

