[package]
name = "ragu_testing-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
ff = { version = "0.14.0-pre.0", default-features = false }
group = { version = "0.14.0-pre.0", default-features = false }
pasta_curves = "0.5.1"
ragu_testing = { path = ".." }
ragu_arithmetic = { path = "../../ragu_arithmetic" }
ragu_primitives = { path = "../../ragu_primitives" }
ragu_pasta = { path = "../../ragu_pasta", features = ["baked"] }
ragu_core = { path = "../../ragu_core" }
ragu_circuits = { path = "../../ragu_circuits" }
ragu_pcd = { path = "../../ragu_pcd", features = ["test-utils"] }
rand = "0.10"

[patch.crates-io]
addchain = { git = "https://github.com/ebfull/addchain", rev = "da4099a81bc29c895f3ca0ebcaae21c860494c12" }
ff = { git = "https://github.com/ebfull/ff", branch = "release-0.14.0-with-rand-0.10" }
group = { git = "https://github.com/ebfull/group", branch = "release-0.14.0-with-rand-0.10" }
pasta_curves = { git = "https://github.com/ebfull/pasta_curves", branch = "ff-0.14-with-rand-0.10" }

# Poseidon sponge: absorb/squeeze mode transitions + save/resume consistency
[[bin]]
name = "fuzz_poseidon_sponge"
path = "fuzz_targets/fuzz_poseidon_sponge.rs"
test = false
doc = false
bench = false

# Endoscalar: extract/lift roundtrip — circuit vs native agreement
[[bin]]
name = "fuzz_endoscalar"
path = "fuzz_targets/fuzz_endoscalar.rs"
test = false
doc = false
bench = false

# Simulator element ops: constraint satisfaction under arbitrary op sequences
[[bin]]
name = "fuzz_element_ops"
path = "fuzz_targets/fuzz_element_ops.rs"
test = false
doc = false
bench = false

# Structured polynomial revdot vs unstructured dot product
[[bin]]
name = "fuzz_revdot"
path = "fuzz_targets/fuzz_revdot.rs"
test = false
doc = false
bench = false

# Two-layer fold_products invariant
[[bin]]
name = "fuzz_fold_revdot"
path = "fuzz_targets/fuzz_fold_revdot.rs"
test = false
doc = false
bench = false

# Three-way s(X,Y) agreement: sxy vs sx.eval(y) vs sy.eval(x)
[[bin]]
name = "fuzz_sxy_agreement"
path = "fuzz_targets/fuzz_sxy_agreement.rs"
test = false
doc = false
bench = false

# Verifier rejection: corrupted proofs must never panic, must be rejected
[[bin]]
name = "fuzz_verify_reject"
path = "fuzz_targets/fuzz_verify_reject.rs"
test = false
doc = false
bench = false
